fix: home page slogan invisible in dark mode

--- a/themes/hugo-theme-stack-master/assets/scss/general.scss
+++ b/themes/hugo-theme-stack-master/assets/scss/general.scss
@@ -30,3 +30,7 @@ a {
         color: var(--body-text-color);
     }
 }
+
+.slogan {
+    color: var(--card-text-color-main);
+}
